<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_marginStart="@dimen/linearshipmentinfomarginstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:id="@+id/orderidshipmentinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="@dimen/linearshipmentinfomarginstart"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:id="@+id/orderdateshipmentinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="@dimen/linearshipmentinfomarginstart"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/arrival_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:id="@+id/arrivaldateshipmentinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="@dimen/linearshipmentinfomarginstart"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:id="@+id/totalpriceshipmentinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
    </LinearLayout>
</LinearLayout>